--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
+        "@tailwindcss/postcss7-compat": "^2.2.19",
         "@vitejs/plugin-vue": "^4.0.0",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
@@ -15,7 +16,6 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
-        "bootstrap": "^5.3.0",
         "tailwindcss": "^3.3.2"
     }
 }
